<resources>
    <string name="app_name">WAY</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_first_page">FirstPage</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="profile_pic">Profile picture</string>
    <string name="submit">Submit</string>
</resources>
