<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:textAlignment="center">

    <TextView
        android:id="@+id/registerError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_red_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:hint="@string/first_name"
            android:textAlignment="center"
            android:textSize="18sp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:hint="@string/last_name"
            android:textAlignment="center"
            android:textSize="18sp">

        </EditText>

        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:hint="@string/email_id"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:textSize="18sp">

        </EditText>

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:hint="@string/mobile_number"
            android:textAlignment="center"
            android:inputType="phone"
            android:textSize="18sp">

        </EditText>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:hint="@string/username"
            android:textAlignment="center"
            android:textSize="18sp">

        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/registerSubmit"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/submit" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminate="true"
        android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>